<resources>
    <string name="app_name">iJump</string>
    <string name="dev_name">Window</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="about_us">About us</string>
    <string name="game_over">Game over!</string>
    <string name="current_score">Your score:</string>
    <string name="best_score">Your best score:</string>
    <string name="play_again">Play again</string>
    <string name="exit_to_menu">Exit to menu</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="menu">Menu</string>
    <string name="ready">Ready</string>
    <string name="enter_nickname">Enter nickname:</string>
    <string name="nickname">Nickname</string>
    <string name="settings">Settings</string>
    <string name="goToBback">Go to back</string>
    <string name="waiting">Wait for the start</string>
    <string name="connect">Connect</string>
    <string name="lobby">Lobby</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="leaderboard">Leaderboard:</string>
    <string name="_1">#1:</string>
    <string name="_2">#2:</string>
    <string name="_3">#3:</string>
    <string name="_4">#4:</string>
    <string name="_5">#5:</string>
    <string name="_6">#6:</string>
    <string name="_7">#7:</string>
    <string name="gotcha">Gotcha!</string>
    <string name="leaderboardText">Leaderboard</string>
    <string name="save_your_result">Save Your Result!</string>
</resources>