<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1.5"
    android:background="@drawable/background">

    <View
        android:id="@+id/leaderboardFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/leaderboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/macondo_swash_caps"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/macondo_swash_caps"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/macondo_swash_caps"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/number3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/macondo_swash_caps"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/number4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/macondo_swash_caps"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/number5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/macondo_swash_caps"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/number6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/macondo_swash_caps"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/number7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/macondo_swash_caps"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_26dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/magra"
            android:layout_marginTop="10sp"
            android:text="@string/gotcha"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playAgainButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>