<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1.5"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gameOverText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/macondo_swash_caps"
            android:text="@string/game_over"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="normal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currentScoreGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp">

            <TextView
                android:id="@+id/currentScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/macondo_swash_caps"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/currentScoreText" />

            <TextView
                android:id="@+id/currentScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/macondo_swash_caps"
                android:text="@string/current_score"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="-1dp"
                tools:layout_editor_absoluteY="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonsGroup"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp">

            <Button
                android:id="@+id/playAgainButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150sp"
                android:background="@drawable/rounded_26dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/magra"
                android:text="@string/play_again"
                android:textAllCaps="false"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/goToMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:width="150sp"
                android:background="@drawable/rounded_26dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/magra"
                android:textAllCaps="false"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playAgainButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>